[CBRD-22152] Fixed generate and apply RBR issues (#1487)
* Sketch for rbr apply

* Add functions replacing tran_index (for DDL proxy)

* ddl proxy : utilities for overriding tran_indx

* change protocol for register_client to handle ddl_proxy desired_tran_index

* change protocol for register_client to handle ddl_proxy desired_tran_index

* Unit tests for SBR apply using ddl_proxy

* unit test cases (WIP)

* fix replication end transaction : release tran_index to force clear the LOG_TDES

* fix compile

* indent

* envvar_bindir_file

* include header

* minor fixes

* Add sys param and user arg to ddl_proxy

* Fix Windows link error

* Apply for SBR and RBR DELETE

* Add replication apply by recdes

* Fixed various rbr issues

* Disable debug for auto increment, click counter

* Fixed compile

* Remove replication attribute change

* Fixed issues in attribute_info_force

* Started serial, click counter, partial abort

* Continue partial abort

* Fixed serial and increment

* Fixed prepare and update lsa issues

* Fixed crashes

* Fixed on duplicate key upate issue

* Fixed crash

* Disable test HA for upgrade_domain, correct repl LSA stamp

* removed unnecesarry code

* Fixed lsa

* Fixed memory crash

* Fixed compile error

* Fixed error code

* Clean

* clean

* clean

* Disabled testing HA for multi update

* Correct simulate apply

* Refactoring according to review

* SBR - Simulate apply on master

* Fixed crashes

* indent

* Fixed SBR crash

* Skip add index savepoint in case of partitions to correctly execute partial abort

* Fixed compile

* Fixed proxy name on windows

* Fixed " in SBR

* Temporary disable testing for quote in SBR

* Temporary disabled password

* Fixed password

* Disable SBR when renaming multiple tables

* Quick fix for long SBR and SBR containing quotes

* Fixed authorization issue

* Debug on master for auto commit only

* 

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -40,6 +40,7 @@ option (UNIT_TEST_DDL_CL "Unit testing: ddl proxy client module")
 option (UNIT_TEST_REPLICATION_CHANNELS "Unit testing: replication channels module")
 option (UNIT_TEST_RESOURCE_TRACKER "Unit testing: resource tracker")
 option (UNIT_TEST_MONITOR "Unit testing: monitor")
+option (UNIT_TEST_MONITOR "Unit testing: replication")
 
 
 message("  unit_tests/...")
