--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -68,13 +68,15 @@ endif(UNIX)
 add_dependencies(csql cubridsa cubridcs)
 
 set(CUB_MASTER_SOURCES
+  ${MASTER_DIR}/heartbeat_service.cpp
   ${MASTER_DIR}/master.c
   ${MASTER_DIR}/master_request.c
   ${MASTER_DIR}/master_util.c
   )
 if(UNIX)
-  list(APPEND CUB_MASTER_SOURCES ${MASTER_DIR}/master_heartbeat.cpp)
   list(APPEND CUB_MASTER_SOURCES ${MASTER_DIR}/heartbeat_cluster.cpp)
+  list(APPEND CUB_MASTER_SOURCES ${MASTER_DIR}/heartbeat_transport.cpp)
+  list(APPEND CUB_MASTER_SOURCES ${MASTER_DIR}/master_heartbeat.cpp)
   SET_SOURCE_FILES_PROPERTIES(
 	${CUB_MASTER_SOURCES}
 	PROPERTIES LANGUAGE CXX
