refactor rpc implementation
Signed-off-by: Valeri Nistor <nistor.valeri@gmail.com>

--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -75,8 +75,8 @@ set(CUB_MASTER_SOURCES
 if(UNIX)
   list(APPEND CUB_MASTER_SOURCES ${MASTER_DIR}/heartbeat_cluster.cpp)
   list(APPEND CUB_MASTER_SOURCES ${MASTER_DIR}/heartbeat_service.cpp)
-  list(APPEND CUB_MASTER_SOURCES ${MASTER_DIR}/heartbeat_transport.cpp)
   list(APPEND CUB_MASTER_SOURCES ${MASTER_DIR}/master_heartbeat.cpp)
+  list(APPEND CUB_MASTER_SOURCES ${MASTER_DIR}/udp_rpc.cpp)
   SET_SOURCE_FILES_PROPERTIES(
 	${CUB_MASTER_SOURCES}
 	PROPERTIES LANGUAGE CXX
@@ -88,6 +88,8 @@ else(UNIX)
   )
   list(APPEND CUB_MASTER_SOURCES ${CMAKE_BINARY_DIR}/version.rc)
 endif(UNIX)
+
+
 
 add_executable(cub_master ${CUB_MASTER_SOURCES})
 target_compile_definitions(cub_master PRIVATE ${COMMON_DEFS})
