Clean code - review

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -323,6 +323,7 @@ set(TRANSACTION_HEADERS
   ${TRANSACTION_DIR}/mvcc.h
   ${TRANSACTION_DIR}/mvcc_active_tran.hpp
   ${TRANSACTION_DIR}/mvcc_table.hpp
+  ${TRANSACTION_DIR}/transaction_master_group_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_global.hpp
   ${TRANSACTION_DIR}/transaction_group.hpp
