--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -302,6 +302,7 @@ set(TRANSACTION_SOURCES
   ${TRANSACTION_DIR}/recovery.c
   ${TRANSACTION_DIR}/replication.c
   ${TRANSACTION_DIR}/transaction_master_group_complete_manager.cpp
+  ${TRANSACTION_DIR}/transaction_slave_group_complete_manager.cpp
   ${TRANSACTION_DIR}/transaction_group_complete_manager.cpp
   ${TRANSACTION_DIR}/transaction_complete_manager.cpp
   ${TRANSACTION_DIR}/transaction_group.cpp
@@ -324,6 +325,8 @@ set(TRANSACTION_HEADERS
   ${TRANSACTION_DIR}/mvcc_active_tran.hpp
   ${TRANSACTION_DIR}/mvcc_table.hpp
   ${TRANSACTION_DIR}/transaction_master_group_complete_manager.hpp
+  ${TRANSACTION_DIR}/transaction_slave_group_complete_manager.hpp
+  ${TRANSACTION_DIR}/transaction_group_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_global.hpp
   ${TRANSACTION_DIR}/transaction_group.hpp
