--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -303,6 +303,7 @@ set(TRANSACTION_SOURCES
   ${TRANSACTION_DIR}/replication.c
   ${TRANSACTION_DIR}/transaction_master_group_complete_manager.cpp
   ${TRANSACTION_DIR}/transaction_slave_group_complete_manager.cpp
+  ${TRANSACTION_DIR}/transaction_single_node_group_complete_manager.cpp
   ${TRANSACTION_DIR}/transaction_group_complete_manager.cpp
   ${TRANSACTION_DIR}/transaction_complete_manager.cpp
   ${TRANSACTION_DIR}/transaction_group.cpp
@@ -326,6 +327,7 @@ set(TRANSACTION_HEADERS
   ${TRANSACTION_DIR}/mvcc_table.hpp
   ${TRANSACTION_DIR}/transaction_master_group_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_slave_group_complete_manager.hpp
+  ${TRANSACTION_DIR}/transaction_single_node_group_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_group_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_global.hpp
