[CBRD-22944] Master node GCM (#1581)
* Master node GCM added

* Fixed previous commit

* Get closed group

* Removed unnecessary flush

* Removed master group file from sa cmake file

* Clean code - review

* Fixed compile

* clean

* Fixed another missed get_last_closed_group

* Slave node GC added

* Revert to 9b342b02c9a879766d7069eb3258d4a6582aa441

* Improve master GC

* Fixed cmake

* Removed unnecessary code

* indent; [skip ci]

* rename; [skip ci]

* formatting; [skip ci]

* typo fix; [skip ci]

* Fixed compile

* Fixed group commit stream position

* review

* Review

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -303,6 +303,8 @@ set(TRANSACTION_SOURCES
   ${TRANSACTION_DIR}/mvcc_table.cpp
   ${TRANSACTION_DIR}/recovery.c
   ${TRANSACTION_DIR}/replication.c
+  ${TRANSACTION_DIR}/transaction_master_group_complete_manager.cpp
+  ${TRANSACTION_DIR}/transaction_group_complete_manager.cpp
   ${TRANSACTION_DIR}/transaction_complete_manager.cpp
   ${TRANSACTION_DIR}/transaction_group.cpp
   ${TRANSACTION_DIR}/transaction_sr.c
@@ -323,6 +325,8 @@ set(TRANSACTION_HEADERS
   ${TRANSACTION_DIR}/mvcc.h
   ${TRANSACTION_DIR}/mvcc_active_tran.hpp
   ${TRANSACTION_DIR}/mvcc_table.hpp
+  ${TRANSACTION_DIR}/transaction_master_group_complete_manager.hpp
+  ${TRANSACTION_DIR}/transaction_group_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_complete_manager.hpp
   ${TRANSACTION_DIR}/transaction_global.hpp
   ${TRANSACTION_DIR}/transaction_group.hpp
