Adding server code (packing schema SBR to copy stream) Relocate net_print_output classes and code for extracting schema to replication_schema_extract (new files) Renaming enums Add convenience methods.

--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -265,6 +265,14 @@ set(OBJECT_HEADERS
   ${OBJECT_DIR}/lob_locator.hpp
 )
 
+set(REPLICATION_SOURCES
+  ${REPLICATION_DIR}/replication_schema_extract.cpp
+)
+
+set(REPLICATION_HEADERS
+  ${REPLICATION_DIR}/replication_schema_extract.hpp
+)
+
 set(JSP_SOURCES
   ${JSP_DIR}/jsp_cl.c
   )
@@ -396,6 +404,7 @@ SET_SOURCE_FILES_PROPERTIES(
   ${QUERY_SOURCES}
   ${OBJECT_SOURCES}
   ${JSP_SOURCES}
+  ${REPLICATION_SOURCES}
   ${TRANSACTION_SOURCES}
   ${STORAGE_SOURCES}
   ${ES_SOURCES}
@@ -436,6 +445,8 @@ add_library(cubridcs SHARED
   ${QUERY_HEADERS}
   ${QUERY_SOURCES}
   ${JSP_SOURCES}
+  ${REPLICATION_HEADERS}
+  ${REPLICATION_SOURCES}
   ${TRANSACTION_HEADERS}
   ${TRANSACTION_SOURCES}
   ${STORAGE_SOURCES}
