--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -204,6 +204,7 @@ set(MONITOR_HEADERS
 set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/log_generator.hpp
   ${REPLICATION_DIR}/log_consumer.hpp
+  ${REPLICATION_DIR}/replication_apply_db_copy.hpp
   ${REPLICATION_DIR}/replication_common.hpp
   ${REPLICATION_DIR}/replication_db_copy.hpp
   ${REPLICATION_DIR}/replication_master_node.hpp
@@ -266,6 +267,7 @@ set(OBJECT_HEADERS
 set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/log_consumer.cpp
   ${REPLICATION_DIR}/log_generator.cpp
+  ${REPLICATION_DIR}/replication_apply_db_copy.cpp
   ${REPLICATION_DIR}/replication_db_copy.cpp
   ${REPLICATION_DIR}/replication_object.cpp
   ${REPLICATION_DIR}/replication_master_node.cpp
