rename files : replication_db_copy as replication_source_db_copy rename class copy_context as source_copy_context

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -206,12 +206,12 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/log_consumer.hpp
   ${REPLICATION_DIR}/replication_apply_db_copy.hpp
   ${REPLICATION_DIR}/replication_common.hpp
-  ${REPLICATION_DIR}/replication_db_copy.hpp
   ${REPLICATION_DIR}/replication_master_node.hpp
   ${REPLICATION_DIR}/replication_master_senders_manager.hpp
   ${REPLICATION_DIR}/replication_node.hpp
   ${REPLICATION_DIR}/replication_object.hpp
   ${REPLICATION_DIR}/replication_slave_node.hpp
+  ${REPLICATION_DIR}/replication_source_db_copy.hpp
   ${REPLICATION_DIR}/replication_stream_entry.hpp
   )
 
@@ -268,12 +268,12 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/log_consumer.cpp
   ${REPLICATION_DIR}/log_generator.cpp
   ${REPLICATION_DIR}/replication_apply_db_copy.cpp
-  ${REPLICATION_DIR}/replication_db_copy.cpp
   ${REPLICATION_DIR}/replication_object.cpp
   ${REPLICATION_DIR}/replication_master_node.cpp
   ${REPLICATION_DIR}/replication_master_senders_manager.cpp
   ${REPLICATION_DIR}/replication_node.cpp
   ${REPLICATION_DIR}/replication_slave_node.cpp
+  ${REPLICATION_DIR}/replication_source_db_copy.cpp
   ${REPLICATION_DIR}/replication_stream_entry.cpp
   )
 
