--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -213,6 +213,7 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/replication_slave_node.hpp
   ${REPLICATION_DIR}/replication_stream_entry.hpp
   ${REPLICATION_DIR}/replication_subtran_apply.hpp
+  ${REPLICATION_DIR}/replication_subtran_generate.hpp
   )
 
 set(QUERY_SOURCES
@@ -275,6 +276,7 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/replication_slave_node.cpp
   ${REPLICATION_DIR}/replication_stream_entry.cpp
   ${REPLICATION_DIR}/replication_subtran_apply.cpp
+  ${REPLICATION_DIR}/replication_subtran_generate.cpp
   )
 
 set(JSP_SOURCES
