take sub-tran replication from replsrl branch

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -214,6 +214,8 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/replication_object.hpp
   ${REPLICATION_DIR}/replication_slave_node.hpp
   ${REPLICATION_DIR}/replication_stream_entry.hpp
+  ${REPLICATION_DIR}/replication_subtran_apply.hpp
+  ${REPLICATION_DIR}/replication_subtran_generate.hpp
   )
 
 set(QUERY_SOURCES
@@ -277,6 +279,8 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/replication_node.cpp
   ${REPLICATION_DIR}/replication_slave_node.cpp
   ${REPLICATION_DIR}/replication_stream_entry.cpp
+  ${REPLICATION_DIR}/replication_subtran_apply.cpp
+  ${REPLICATION_DIR}/replication_subtran_generate.cpp
   )
 
 set(JSP_SOURCES
