[CBRD-22780] share streams in master_node and slave_node (#1641)
http://jira.cubrid.org/browse/CBRD-22780

Comprising changes:
- Add manager of replication node that contains the shared stream & stream file. It supports commuting of the underlying replication_node to master_node/slave_mode from the other mode
- Refactor out master_node & slave_node static members & prefer constructor/destructors
- Apply master_node/slave_node state changes from css_change_server_state

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -212,6 +212,7 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/slave_control_channel.hpp
   ${REPLICATION_DIR}/master_control_channel.hpp
   ${REPLICATION_DIR}/replication_node.hpp
+  ${REPLICATION_DIR}/replication_node_manager.hpp
   ${REPLICATION_DIR}/replication_object.hpp
   ${REPLICATION_DIR}/replication_row_apply.hpp
   ${REPLICATION_DIR}/replication_slave_node.hpp
@@ -277,6 +278,7 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/replication_master_node.cpp
   ${REPLICATION_DIR}/replication_master_senders_manager.cpp
   ${REPLICATION_DIR}/replication_node.cpp
+  ${REPLICATION_DIR}/replication_node_manager.cpp
   ${REPLICATION_DIR}/replication_row_apply.cpp
   ${REPLICATION_DIR}/replication_slave_node.cpp
   ${REPLICATION_DIR}/replication_stream_entry.cpp
