[CBRD-23036] Replicating sub-transactions (#1654)
http://jira.cubrid.org/browse/CBRD-23036

Properties of sub-transactions - 

  1. One or multiple changes that need to become atomically and immediately visible.
  2. On master, they the transaction descriptor of current thread is used and a system operation that is committed (with replication confirmation). Locks are immediately released
  3. A separate MVCCID may be assigned (click counters)\*

### sub-transaction replication

  - a new class, replication_subtran_generate to manage both logging and replication for sub-transaction; it creates a separate replication generator that should be used instead of tdes generator.
  - when committed, a replication packed, pack_stream_entry returns starting stream position, which is then logged with `log_sysop_commit_replicated`
  - a new stream entry state, SUBTRAN_COMMIT is used to allow `log_consumer` recognize new stream entry type

### sub-transaction apply

  - a new class, replication_subtran_apply manages apply of all sub-transactions.
  - when a SUBTRAN_COMMIT stream entry is found, it is collected by replication_subtran_apply.
  - on group commit, a new step is added; after making sure previous group was applied, all sub-transactions are applied first, serially, in the order found in stream\*\*; then it applies regular transactions\*\*\*
  - to apply a sub-transaction, a system worker transaction and a log system operation is used; to make locator functions work, we had to hack them to accept NULL transaction snapshot and to suppress locking\*\*\*

### other changes

  - heap_attrinfo_set_and_replicate function that can override replication generator
  - new thread types to recognize replication appliers

### NOTES:
\* sub-transaction apply do not yet consider having an MVCCID; it will be implemented with the replication of click counters

\*\* since sub-transactions release locks immediately, same row may be updated multiple times in a g

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -217,6 +217,8 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/replication_row_apply.hpp
   ${REPLICATION_DIR}/replication_slave_node.hpp
   ${REPLICATION_DIR}/replication_stream_entry.hpp
+  ${REPLICATION_DIR}/replication_subtran_apply.hpp
+  ${REPLICATION_DIR}/replication_subtran_generate.hpp
   )
 
 set(QUERY_SOURCES
@@ -282,6 +284,8 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/replication_row_apply.cpp
   ${REPLICATION_DIR}/replication_slave_node.cpp
   ${REPLICATION_DIR}/replication_stream_entry.cpp
+  ${REPLICATION_DIR}/replication_subtran_apply.cpp
+  ${REPLICATION_DIR}/replication_subtran_generate.cpp
   )
 
 set(JSP_SOURCES
