--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -151,6 +151,7 @@ set (BASE_HEADERS
   ${BASE_DIR}/process_util.h
   ${BASE_DIR}/resource_tracker.hpp
   ${BASE_DIR}/string_buffer.hpp
+  ${BASE_DIR}/semaphore.hpp
   )
 
 set(EXECUTABLE_SOURCES
