--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -207,7 +207,6 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/log_generator.hpp
   ${REPLICATION_DIR}/log_consumer.hpp
   ${REPLICATION_DIR}/replication_common.hpp
-  ${REPLICATION_DIR}/replication_db_copy.hpp
   ${REPLICATION_DIR}/replication_master_node.hpp
   ${REPLICATION_DIR}/replication_master_senders_manager.hpp
   ${REPLICATION_DIR}/slave_control_channel.hpp
@@ -217,6 +216,7 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/replication_object.hpp
   ${REPLICATION_DIR}/replication_row_apply.hpp
   ${REPLICATION_DIR}/replication_slave_node.hpp
+  ${REPLICATION_DIR}/replication_source_db_copy.hpp
   ${REPLICATION_DIR}/replication_stream_entry.hpp
   ${REPLICATION_DIR}/replication_subtran_apply.hpp
   ${REPLICATION_DIR}/replication_subtran_generate.hpp
@@ -276,7 +276,6 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/log_generator.cpp
   ${REPLICATION_DIR}/slave_control_channel.cpp
   ${REPLICATION_DIR}/master_control_channel.cpp
-  ${REPLICATION_DIR}/replication_db_copy.cpp
   ${REPLICATION_DIR}/replication_object.cpp
   ${REPLICATION_DIR}/replication_master_node.cpp
   ${REPLICATION_DIR}/replication_master_senders_manager.cpp
@@ -284,6 +283,7 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/replication_node_manager.cpp
   ${REPLICATION_DIR}/replication_row_apply.cpp
   ${REPLICATION_DIR}/replication_slave_node.cpp
+  ${REPLICATION_DIR}/replication_source_db_copy.cpp
   ${REPLICATION_DIR}/replication_stream_entry.cpp
   ${REPLICATION_DIR}/replication_subtran_apply.cpp
   ${REPLICATION_DIR}/replication_subtran_generate.cpp
