Added wrapper over push_task

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -378,10 +378,10 @@ set(LOADDB_SOURCES
   ${LOADDB_DIR}/load_db_value_converter.cpp
   ${LOADDB_DIR}/load_driver.cpp
   ${LOADDB_DIR}/load_error_handler.cpp
-  ${LOADDB_DIR}/load_manager.cpp
   ${LOADDB_DIR}/load_semantic_helper.cpp
   ${LOADDB_DIR}/load_server_loader.cpp
   ${LOADDB_DIR}/load_session.cpp
+  ${LOADDB_DIR}/load_worker_manager.cpp
   )
 
 set(LOADDB_HEADERS
@@ -391,10 +391,10 @@ set(LOADDB_HEADERS
   ${LOADDB_DIR}/load_db_value_converter.hpp
   ${LOADDB_DIR}/load_driver.hpp
   ${LOADDB_DIR}/load_error_handler.hpp
-  ${LOADDB_DIR}/load_manager.hpp
   ${LOADDB_DIR}/load_semantic_helper.hpp
   ${LOADDB_DIR}/load_server_loader.hpp
   ${LOADDB_DIR}/load_session.hpp
+  ${LOADDB_DIR}/load_worker_manager.hpp
   )
 
 list(APPEND CONNECTION_SOURCES ${CONNECTION_DIR}/heartbeat.c)
