add concurrent queue structure

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -133,6 +133,7 @@ set(BASE_SOURCES
   ${BASE_DIR}/xml_parser.c
   )
 set (BASE_HEADERS
+  ${BASE_DIR}/concurrent_queue.hpp
   ${BASE_DIR}/error_code.h
   ${BASE_DIR}/error_context.hpp
   ${BASE_DIR}/error_manager.h
