--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -135,6 +135,7 @@ set(BASE_SOURCES
   )
 
 set(BASE_HEADERS
+  ${BASE_DIR}/concurrent_queue.hpp
   ${BASE_DIR}/error_code.h
   ${BASE_DIR}/error_context.hpp
   ${BASE_DIR}/error_manager.h
