replace consumer daemon with stream_entry_fetcher

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -222,6 +222,7 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/replication_stream_entry.hpp
   ${REPLICATION_DIR}/replication_subtran_apply.hpp
   ${REPLICATION_DIR}/replication_subtran_generate.hpp
+  ${REPLICATION_DIR}/stream_entry_fetcher.hpp
   )
 
 set(QUERY_SOURCES
@@ -289,6 +290,7 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/replication_stream_entry.cpp
   ${REPLICATION_DIR}/replication_subtran_apply.cpp
   ${REPLICATION_DIR}/replication_subtran_generate.cpp
+  ${REPLICATION_DIR}/stream_entry_fetcher.cpp
   )
 
 set(JSP_SOURCES
