unify dispatch + fetch

--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -74,6 +74,7 @@ set (STREAM_HEADERS
   ${BASE_DIR}/cubstream.hpp
   ${BASE_DIR}/multi_thread_stream.hpp
   ${BASE_DIR}/stream_entry.hpp
+  ${BASE_DIR}/stream_entry_fetcher.hpp
   ${BASE_DIR}/stream_file.hpp
   )
 
