--- a/cubrid/CMakeLists.txt
+++ b/cubrid/CMakeLists.txt
@@ -208,7 +208,6 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/log_generator.hpp
   ${REPLICATION_DIR}/log_consumer.hpp
   ${REPLICATION_DIR}/replication_common.hpp
-  ${REPLICATION_DIR}/replication_db_copy.hpp
   ${REPLICATION_DIR}/replication_master_node.hpp
   ${REPLICATION_DIR}/stream_senders_manager.hpp
   ${REPLICATION_DIR}/slave_control_channel.hpp
@@ -218,6 +217,7 @@ set (REPLICATION_HEADERS
   ${REPLICATION_DIR}/replication_object.hpp
   ${REPLICATION_DIR}/replication_row_apply.hpp
   ${REPLICATION_DIR}/replication_slave_node.hpp
+  ${REPLICATION_DIR}/replication_source_db_copy.hpp
   ${REPLICATION_DIR}/replication_stream_entry.hpp
   ${REPLICATION_DIR}/replication_subtran_apply.hpp
   ${REPLICATION_DIR}/replication_subtran_generate.hpp
@@ -277,7 +277,6 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/log_generator.cpp
   ${REPLICATION_DIR}/slave_control_channel.cpp
   ${REPLICATION_DIR}/master_control_channel.cpp
-  ${REPLICATION_DIR}/replication_db_copy.cpp
   ${REPLICATION_DIR}/replication_object.cpp
   ${REPLICATION_DIR}/replication_master_node.cpp
   ${REPLICATION_DIR}/stream_senders_manager.cpp
@@ -285,6 +284,7 @@ set(REPLICATION_SOURCES
   ${REPLICATION_DIR}/replication_node_manager.cpp
   ${REPLICATION_DIR}/replication_row_apply.cpp
   ${REPLICATION_DIR}/replication_slave_node.cpp
+  ${REPLICATION_DIR}/replication_source_db_copy.cpp
   ${REPLICATION_DIR}/replication_stream_entry.cpp
   ${REPLICATION_DIR}/replication_subtran_apply.cpp
   ${REPLICATION_DIR}/replication_subtran_generate.cpp
