--- a/cs/CMakeLists.txt
+++ b/cs/CMakeLists.txt
@@ -155,6 +155,7 @@ set(BASE_HEADERS
   ${BASE_DIR}/string_buffer.hpp
   ${BASE_DIR}/resource_tracker.hpp
   ${BASE_DIR}/semaphore.hpp
+  ${BASE_DIR}/type_traits_utils.hpp
   )
 
 set(HEAPLAYER_SOURCES
